# meta-model-train

./: .gitattributes  .gitignore  README.md  environment.yml  pyproject.toml
docs/: 2.0_setting说明.md  GitHub_服务器同步操作.md  建仓与首训清单.md  服务器2.0全量2000步训练说明.md  服务器2.1全量16000步训练说明.md  服务器正式训练说明.md  首跑说明.md
scripts/: analyze_formal_v2_family.py  analyze_formal_v2_seed_variance_share.py  analyze_lallar_seed_variance_share.py  build_meta_dataset.py  check_environment.py  compare_current_vs_identity_init.py  compare_residual_output_init.py  enumerate_architectures.py  explore_full328_v1_v3.py  meta_model_cli.py  plot_family_curves.py  plot_full328_architecture_curves.py  plot_full328_model_prediction_curves.py  plot_full328_weight_decay_sweep.py  plot_meta_dataset_spread.py  plot_meta_model_final_step_diagnostics.py  plot_meta_model_residual_scatter_by_step.py  run_formal_v2_full256_steps16000_two_shards_and_merge.sh  run_formal_v2_full256_steps2000_two_shards_and_merge.sh  run_full328_residual1000_two_shards_and_merge.sh  run_full328_timefit_residual.py  run_lallar_seed_stability.py  run_meta_baselines.py  run_single_arch_seed_scaling.py  run_smoke_pipeline.py  server_launch_family_shard.sh  server_quickstart.sh  sweep_direct_capacity.py  sweep_residual_log_capacity.py  train_minimal_arch_family.py  train_minimal_arch_smoke.py
src/meta_model_train/: __init__.py  diffusion_dataset.py  minimal_arch_model.py
